finish mms types

--- a/scripts/sandbox.ipynb
+++ b/scripts/sandbox.ipynb
@@ -44,11 +44,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "for c in mms.columns:\n",
-        "    print(c, \": \", mms[c].nunique(), \" / \", mms[c].count())\n",
-        "    print(\"---------------\")\n",
-        "    print(mms[c].value_counts().head(3))\n",
-        "    print()"
+        "mms.m_size.value_counts()"
       ]
     }
   ],
