grab filename metadata from voice

--- a/scripts/sandbox.ipynb
+++ b/scripts/sandbox.ipynb
@@ -35,7 +35,12 @@
         "mms = pd.read_xml(\"data/xml/mms-20230818094717.xml\")\n",
         "mms\n",
         "mms.info()\n",
-        "mms.describe()"
+        "mms.describe()\n",
+        "for c in mms.columns:\n",
+        "    print(c, \": \", mms[c].nunique(), \" / \", mms[c].count())\n",
+        "    print(\"---------------\")\n",
+        "    print(mms[c].value_counts().head(3))\n",
+        "    print()"
       ]
     },
     {
@@ -44,7 +49,20 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "mms.m_size.value_counts()"
+        "from pathlib import Path\n",
+        "\n",
+        "voice_dir = Path(\"data/voice\")\n",
+        "\n",
+        "# list(voice_dir.glob(\"*\"))\n",
+        "globs = [f.stem.split(\" - \") for f in voice_dir.glob(\"*\") if f.is_file()]\n",
+        "# [[\"\"] + f if len(f) < 3 else f for f in globs]\n",
+        "files = pd.DataFrame(\n",
+        "    [[\"\"] + f if len(f) < 3 else f for f in globs],\n",
+        "    columns=[\"contact\", \"type\", \"date_time\"],\n",
+        ")\n",
+        "files\n",
+        "files.type.value_counts()\n",
+        "# [f.stem.split(sep=\"-\") for f in voice_dir.glob(\"*\") if f.is_file()]"
       ]
     }
   ],
