--- a/scripts/sandbox.ipynb
+++ b/scripts/sandbox.ipynb
@@ -6,7 +6,10 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import pandas as pd"
+        "from pathlib import Path\n",
+        "\n",
+        "import pandas as pd\n",
+        "import regex as re"
       ]
     },
     {
@@ -49,17 +52,30 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from pathlib import Path\n",
-        "\n",
         "voice_dir = Path(\"data/voice\")\n",
+        "\n",
+        "fnames = [f.stem for f in voice_dir.glob(\"*\") if f.is_file()]\n",
         "\n",
         "# list(voice_dir.glob(\"*\"))\n",
         "globs = [f.stem.split(\" - \") for f in voice_dir.glob(\"*\") if f.is_file()]\n",
+        "# meta = [re.findall(r\"(.*) - (.*) - ([0-9\\-]+)T([0-9_])Z\", fname) for fname in fnames]\n",
+        "\n",
+        "\n",
         "# [[\"\"] + f if len(f) < 3 else f for f in globs]\n",
         "files = pd.DataFrame(\n",
         "    [[\"\"] + f if len(f) < 3 else f for f in globs],\n",
         "    columns=[\"contact\", \"type\", \"date_time\"],\n",
         ")\n",
+        "files[\"date\"] = files.date_time.str.extract(r\"([0-9\\-]+)T\")\n",
+        "files[\"time\"] = files.date_time.str.extract(r\"T(.*)Z\", expand=False).str.replace(\n",
+        "    \"_\", \":\"\n",
+        ")\n",
+        "# files.date_time.str.extract(r\"T(.*)Z\", expand=False).str.replace(\"_\", \":\")\n",
+        "# fnames[:10]\n",
+        "# re.findall(r\"(.*) - (.*) - ([0-9\\-]+)T([0-9_]+)Z\", fnames[2])\n",
+        "# re.findall(r\"(.*?) - \", fnames[2])\n",
+        "# meta\n",
+        "# globs\n",
         "files\n",
         "files.type.value_counts()\n",
         "# [f.stem.split(sep=\"-\") for f in voice_dir.glob(\"*\") if f.is_file()]"
