start filtering soup

--- a/scripts/sandbox.ipynb
+++ b/scripts/sandbox.ipynb
@@ -7,9 +7,12 @@
       "outputs": [],
       "source": [
         "from pathlib import Path\n",
-        "\n",
+        "import warnings\n",
         "import pandas as pd\n",
-        "import regex as re"
+        "import regex as re\n",
+        "from bs4 import BeautifulSoup as BS\n",
+        "\n",
+        "# warnings.filterwarnings(action=\"ignore\", category=\"XMLParsedAsHTMLWarning\")"
       ]
     },
     {
@@ -19,7 +22,9 @@
       "outputs": [],
       "source": [
         "sms = pd.read_xml(\"data/xml/sms-20230818094717.xml\")\n",
-        "sms\n",
+        "sms[\"date\"] = (\n",
+        "    sms.date.astype(\"datetime64[ms]\").dt.tz_localize(\"UTC\").dt.tz_convert(\"US/Central\")\n",
+        ")\n",
         "sms.info()\n",
         "sms.describe()\n",
         "for c in sms.columns:\n",
@@ -36,7 +41,9 @@
       "outputs": [],
       "source": [
         "mms = pd.read_xml(\"data/xml/mms-20230818094717.xml\")\n",
-        "mms\n",
+        "mms[\"date\"] = (\n",
+        "    mms.date.astype(\"datetime64[ms]\").dt.tz_localize(\"UTC\").dt.tz_convert(\"US/Central\")\n",
+        ")\n",
         "mms.info()\n",
         "mms.describe()\n",
         "for c in mms.columns:\n",
@@ -52,33 +59,52 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "voice_dir = Path(\"data/voice\")\n",
+        "voice_dir = Path(\"data/voice_sample\")\n",
         "\n",
-        "fnames = [f.stem for f in voice_dir.glob(\"*\") if f.is_file()]\n",
+        "files = sorted(voice_dir.glob(\"*\"))\n",
         "\n",
-        "# list(voice_dir.glob(\"*\"))\n",
-        "globs = [f.stem.split(\" - \") for f in voice_dir.glob(\"*\") if f.is_file()]\n",
-        "# meta = [re.findall(r\"(.*) - (.*) - ([0-9\\-]+)T([0-9_])Z\", fname) for fname in fnames]\n",
+        "fnames = [f.stem for f in files if f.is_file()]\n",
         "\n",
-        "\n",
-        "# [[\"\"] + f if len(f) < 3 else f for f in globs]\n",
-        "files = pd.DataFrame(\n",
-        "    [[\"\"] + f if len(f) < 3 else f for f in globs],\n",
-        "    columns=[\"contact\", \"type\", \"date_time\"],\n",
+        "meta = pd.DataFrame({\"file\": files})\n",
+        "meta[\"name\"] = meta.file.apply(lambda p: p.name)\n",
+        "meta = pd.concat(\n",
+        "    [\n",
+        "        meta,\n",
+        "        meta.name.str.extract(\n",
+        "            r\"(?:(?P<contact>.+) - )?(?P<type>.+) - (?P<date>[0-9\\-]+)T(?P<time>[0-9\\_]+)Z?-?(?P<attachment>[0-9\\-]+)?\\.(?P<ext>.*)\"\n",
+        "        ),\n",
+        "    ],\n",
+        "    axis=1,\n",
         ")\n",
-        "files[\"date\"] = files.date_time.str.extract(r\"([0-9\\-]+)T\")\n",
-        "files[\"time\"] = files.date_time.str.extract(r\"T(.*)Z\", expand=False).str.replace(\n",
-        "    \"_\", \":\"\n",
-        ")\n",
-        "# files.date_time.str.extract(r\"T(.*)Z\", expand=False).str.replace(\"_\", \":\")\n",
-        "# fnames[:10]\n",
-        "# re.findall(r\"(.*) - (.*) - ([0-9\\-]+)T([0-9_]+)Z\", fnames[2])\n",
-        "# re.findall(r\"(.*?) - \", fnames[2])\n",
+        "\n",
+        "# files\n",
+        "# fnames\n",
         "# meta\n",
-        "# globs\n",
-        "files\n",
-        "files.type.value_counts()\n",
-        "# [f.stem.split(sep=\"-\") for f in voice_dir.glob(\"*\") if f.is_file()]"
+        "\n",
+        "soup = BS(meta.file[11].open(), features=\"xml\")\n",
+        "soup.select(\"div.message\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# sms\n",
+        "# sms['date'] = sms.date.astype(\"datetime64[ms]\").dt.tz\n",
+        "sms.sort_values(\"date\", ascending=False).head(\n",
+        "    40\n",
+        ").style  # .groupby(\"contact_name\").apply(lambda x: x)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "mms.sort_values(\"date\", ascending=False).head(40).style"
       ]
     }
   ],
